# TinyChatBot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TinyChatBot.code-workspace  cspell.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
content/: PoggleBase v3.2.1 Enterprise Installation Guide.docx  Transcript 01.txt  Transcript 02.txt
docs/: ARCHITECTURE.md  personas.md
scripts/: smoke_load.py
src/tinychatbot/: __init__.py  app.py  config.py  documents.py  errors.py  io_utils.py  llm_client.py  personas.py  qa_service.py  vector_store.py
src/tinychatbot/personas/: cheerful_support.md  default.md  expert_architect.md  goldie_game_store_assistant.md
tests/: test_app.py  test_app_persona_switch.py  test_chunk_metadata.py  test_demo_ready.py  test_docx_multipage.py  test_io_utils.py  test_personas.py  test_qa_service.py
